# Cleaner-OS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  PROJECT_STATUS.md  README.md  config.yaml  config.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/scan/: action.yml
.github/workflows/: ci.yml  publish.yml
docs/: COMMERCIAL.md  GITHUB_SETUP.md  MCP.md  PRODUCT.md  PYPI_DEFERRED.md  TECHNICAL_REVIEW.md  migration-from-cleanmac.md
docs/assets/: README.md
docs/history/: CHANGELOG-legacy-ru.md
docs/homebrew/: syscleaner.rb
examples/: com.syscleaner.weekly.plist  workflow-sarif.yml
scripts/: README.md  backup_configs.sh.example  system_health_check.sh.example
src/syscleaner/: __init__.py  __main__.py  cleanup.py  config.py  hf_cli.py  main.py  mcp_server.py  plan_builder.py  profiles.py  reporter.py  sarif.py  scan_bundle.py  tui_app.py
src/syscleaner/analyzer/: __init__.py  dependencies.py  ml_cache.py  security.py
src/syscleaner/apply/: __init__.py  orchestrator.py
src/syscleaner/i18n/: __init__.py  core.py  messages_en.py  messages_ru.py
src/syscleaner/models/: __init__.py  entities.py
src/syscleaner/platform/: __init__.py  detector.py  linux.py  macos.py  paths.py  system_info.py
src/syscleaner/recognizers/: __init__.py  base.py  builtin.py  errors.py  plugins.py  registry.py
src/syscleaner/scanner/: __init__.py  applications.py  caches.py  duplicates.py  hidden.py  logs.py  projects.py  trash.py  utils.py
tests/: conftest.py  test_apply.py  test_apply_errors.py  test_basic.py  test_cleanup.py  test_cli.py  test_config_env.py  test_duplicates.py  test_fixture_bundle.py  test_hf_cli.py  test_i18n.py  test_mcp_apply.py  test_mcp_tools.py  test_models.py  test_plan_budget.py  test_plugins.py  test_profiles.py  test_recognizers.py  test_recognizers_extended.py  test_reporter.py  test_sarif.py  test_scan_bundle_build.py  test_scanners_smoke.py  test_security.py  test_tui_execute.py
tests/fixtures/: scan_sample.json
