[project]
name = "syscleaner"
version = "0.3.0"
description = "Universal CLI for system cleanup and audit (macOS and Linux)"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Aleksandr Mordvinov"}
]
keywords = [
    "system-cleaner",
    "macos",
    "linux",
    "cleanup",
    "audit",
    "security",
    "ml-cache",
    "huggingface",
    "pytorch",
    "dependencies",
    "dependency-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/FUYOH666/Cleaner-OS"
Repository = "https://github.com/FUYOH666/Cleaner-OS"
Issues = "https://github.com/FUYOH666/Cleaner-OS/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "pyright>=1.1.408",
]

[project.scripts]
syscleaner = "syscleaner.main:app"
system-cleaner = "syscleaner.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

