[project]
name = "syscleaner"
version = "1.2.1"
description = "Trusted audit and tiered cleanup for dev workstations (macOS and Linux)"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Aleksandr Mordvinov"}
]
keywords = [
    "system-cleaner",
    "macos",
    "linux",
    "cleanup",
    "audit",
    "security",
    "ml-cache",
    "huggingface",
    "pytorch",
    "dependencies",
    "dependency-analysis",
    "uv",
    "cursor",
    "disk-space",
    "developer-tools",
    "sarif",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/FUYOH666/Cleaner-OS"
Repository = "https://github.com/FUYOH666/Cleaner-OS"
Issues = "https://github.com/FUYOH666/Cleaner-OS/issues"

[project.optional-dependencies]
tui = ["textual>=0.80.0"]
mcp = ["mcp>=1.6.0"]
all = ["textual>=0.80.0", "mcp>=1.6.0"]

[project.scripts]
syscleaner-mcp = "syscleaner.mcp_server:main"
syscleaner = "syscleaner.main:app"
system-cleaner = "syscleaner.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"

[project.entry-points."syscleaner.recognizers"]
# Third-party recognizers register here, e.g.:
# myplugin = "my_package:MyRecognizer"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.400",
    "bandit>=1.8.0",
    "textual>=0.80.0",
    "mcp>=1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=syscleaner", "--cov-report=term-missing", "--cov-fail-under=60"]

[tool.coverage.run]
source = ["syscleaner"]
omit = [
    "*/tui_app.py",
    "*/__main__.py",
    "*/platform/linux.py",
    "*/platform/macos.py",
    "*/analyzer/dependencies.py",
    "*/analyzer/ml_cache.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/syscleaner"]

